// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`createBanner check customized logo... 1`] = `
<div
  style="background: var(--sui-bg-header, white); box-shadow: var(--sui-header-shadow, 0px 1px 4px #000000); display: flex; justify-content: space-between; padding: 0 var(--sui-space-lg, 1.5em);"
>
  <a
    href="https://test.com"
    style="undefined"
  >
    <img
      src="https://solidproject.org/assets/img/solid-emblem.svg"
      style="background-size: 65px var(--sui-header-height, 60px) !important; height: var(--sui-header-height, 60px) !important; width: 65px !important;"
    />
  </a>
  <div
    style="display: flex;"
  >
    <div
      style="undefined"
    >
      <button
        style="background: none; border: 0; cursor: pointer; width: var(--sui-header-height, 60px); height: var(--sui-header-height, 60px);"
        type="button"
      >
        

        <svg
          fill="none"
          height="26"
          viewBox="0 0 26 26"
          width="26"
          xmlns="http://www.w3.org/2000/svg"
        >
          
    
          <path
            clip-rule="evenodd"
            d="M13 25C19.6274 25 25 19.6274 25 13C25 6.37258 19.6274 1 13 1C6.37258 1 1 6.37258 1 13C1 19.6274 6.37258 25 13 25Z"
            fill="#D8D8D8"
            fill-rule="evenodd"
            stroke="#8B8B8B"
          />
          
    
          <mask
            height="26"
            id="mask0"
            mask-type="alpha"
            maskUnits="userSpaceOnUse"
            width="26"
            x="0"
            y="0"
          >
            
        
            <path
              clip-rule="evenodd"
              d="M13 25C19.6274 25 25 19.6274 25 13C25 6.37258 19.6274 1 13 1C6.37258 1 1 6.37258 1 13C1 19.6274 6.37258 25 13 25Z"
              fill="white"
              fill-rule="evenodd"
              stroke="white"
            />
            
    
          </mask>
          
    
          <g
            mask="url(#mask0)"
          >
            
        
            <path
              clip-rule="evenodd"
              d="M17.0468 10.4586C17.0468 14.4979 15.4281 16.9214 12.9999 16.9214C10.5718 16.9214 8.95298 14.4979 8.95298 10.4586C8.95298 6.41931 12.9999 6.41931 12.9999 6.41931C12.9999 6.41931 17.0468 6.41931 17.0468 10.4586ZM4.09668 23.3842C6.52483 17.7293 12.9999 17.7293 12.9999 17.7293C12.9999 17.7293 19.475 17.7293 21.9031 23.3842C21.9031 23.3842 17.8481 25 12.9999 25C8.15169 25 4.09668 23.3842 4.09668 23.3842Z"
              fill="#8B8B8B"
              fill-rule="evenodd"
            />
            
    
          </g>
          

        </svg>
      </button>
      <nav
        aria-hidden="true"
        id="loggedInNav"
        style="background: var(--sui-bg-panel, white); border: solid 1px var(--sui-text, #000000); border-right: 0; position: absolute; right: 0; top: var(--sui-header-height, 60px); width: 200px; z-index: var(--sui-z-dropdown, 1); display: none;"
      >
        <ul
          style="list-style: none; margin: 0; padding: 0;"
        >
          <li
            style="border-bottom: solid 1px var(--sui-text, #000000);"
          >
            <a
              href="https://reflectechblog.wordpress.com/"
              style="background: none; border: 0; color: var(--sui-text, black); cursor: pointer; display: block; font-family: Arial; font-size: 1em; text-align: left; padding: var(--sui-space-md, 1em); width: 100%; text-decoration: none;"
            />
          </li>
        </ul>
      </nav>
    </div>
    <div
      style="border-left: solid 1px var(--sui-text, #000000); margin-left: auto;"
    >
      <nav
        aria-hidden="true"
        id="helperNav"
        style="background: var(--sui-bg-panel, white); border: solid 1px var(--sui-text, #000000); border-right: 0; position: absolute; right: 0; top: var(--sui-header-height, 60px); width: 200px; z-index: var(--sui-z-dropdown, 1); display: none;"
      >
        <ul
          style="list-style: none; margin: 0; padding: 0;"
        >
          <li
            style="undefined font-weight: bold; padding: 0.5em 1em; color: #666; font-size: 0.9em;"
          >
            🎨 Themes
          </li>
          <li
            style="border-bottom: solid 1px var(--sui-text, #000000);"
          >
            <button
              style="background: none; border: 0; color: var(--sui-text, black); cursor: pointer; display: block; font-family: Arial; font-size: 1em; text-align: left; padding: var(--sui-space-md, 1em); width: 100%;"
            />
          </li>
          <li
            style="border-bottom: solid 1px var(--sui-text, #000000);"
          >
            <button
              style="background: none; border: 0; color: var(--sui-text, black); cursor: pointer; display: block; font-family: Arial; font-size: 1em; text-align: left; padding: var(--sui-space-md, 1em); width: 100%;"
            />
          </li>
          <li
            style="border-bottom: solid 1px var(--sui-text, #000000);"
          >
            <button
              style="background: none; border: 0; color: var(--sui-text, black); cursor: pointer; display: block; font-family: Arial; font-size: 1em; text-align: left; padding: var(--sui-space-md, 1em); width: 100%;"
            />
          </li>
          <li
            style="border-bottom: solid 1px var(--sui-text, #000000);"
          >
            <button
              style="background: none; border: 0; color: var(--sui-text, black); cursor: pointer; display: block; font-family: Arial; font-size: 1em; text-align: left; padding: var(--sui-space-md, 1em); width: 100%;"
            />
          </li>
          <li
            style="border-bottom: solid 1px var(--sui-text, #000000);"
          >
            <button
              style="background: none; border: 0; color: var(--sui-text, black); cursor: pointer; display: block; font-family: Arial; font-size: 1em; text-align: left; padding: var(--sui-space-md, 1em); width: 100%;"
            />
          </li>
          <li
            style="border-top: 1px solid #ddd; margin: 0.5em 0;"
          />
          <li
            style="border-bottom: solid 1px var(--sui-text, #000000);"
          >
            <a
              href="https://reflectechblog.wordpress.com/"
              style="background: none; border: 0; color: var(--sui-text, black); cursor: pointer; display: block; font-family: Arial; font-size: 1em; text-align: left; padding: var(--sui-space-md, 1em); width: 100%; text-decoration: none;"
            />
          </li>
        </ul>
      </nav>
      <button
        style="background: none; border: 0; cursor: pointer; width: var(--sui-header-height, 60px); height: var(--sui-header-height, 60px);"
        type="button"
      >
        <img
          src="https://solidos.github.io/solid-ui/src/icons/https://solidos.github.io/solid-ui/src/icons/noun_help.svg"
          style="border-radius: var(--sui-border-radius-full, 50%); height: 56px; width: 28px !important;"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`createBanner creates a link 1`] = `
<div
  style="background: var(--sui-bg-header, white); box-shadow: var(--sui-header-shadow, 0px 1px 4px #000000); display: flex; justify-content: space-between; padding: 0 var(--sui-space-lg, 1.5em);"
>
  <a
    href="https://test.com"
    style="undefined"
  >
    <img
      src="https://solidproject.org/assets/img/solid-emblem.svg"
      style="background-size: 65px var(--sui-header-height, 60px) !important; height: var(--sui-header-height, 60px) !important; width: 65px !important;"
    />
  </a>
  <div
    style="display: flex;"
  >
    <div
      style="undefined"
    >
      <button
        style="background: none; border: 0; cursor: pointer; width: var(--sui-header-height, 60px); height: var(--sui-header-height, 60px);"
        type="button"
      >
        

        <svg
          fill="none"
          height="26"
          viewBox="0 0 26 26"
          width="26"
          xmlns="http://www.w3.org/2000/svg"
        >
          
    
          <path
            clip-rule="evenodd"
            d="M13 25C19.6274 25 25 19.6274 25 13C25 6.37258 19.6274 1 13 1C6.37258 1 1 6.37258 1 13C1 19.6274 6.37258 25 13 25Z"
            fill="#D8D8D8"
            fill-rule="evenodd"
            stroke="#8B8B8B"
          />
          
    
          <mask
            height="26"
            id="mask0"
            mask-type="alpha"
            maskUnits="userSpaceOnUse"
            width="26"
            x="0"
            y="0"
          >
            
        
            <path
              clip-rule="evenodd"
              d="M13 25C19.6274 25 25 19.6274 25 13C25 6.37258 19.6274 1 13 1C6.37258 1 1 6.37258 1 13C1 19.6274 6.37258 25 13 25Z"
              fill="white"
              fill-rule="evenodd"
              stroke="white"
            />
            
    
          </mask>
          
    
          <g
            mask="url(#mask0)"
          >
            
        
            <path
              clip-rule="evenodd"
              d="M17.0468 10.4586C17.0468 14.4979 15.4281 16.9214 12.9999 16.9214C10.5718 16.9214 8.95298 14.4979 8.95298 10.4586C8.95298 6.41931 12.9999 6.41931 12.9999 6.41931C12.9999 6.41931 17.0468 6.41931 17.0468 10.4586ZM4.09668 23.3842C6.52483 17.7293 12.9999 17.7293 12.9999 17.7293C12.9999 17.7293 19.475 17.7293 21.9031 23.3842C21.9031 23.3842 17.8481 25 12.9999 25C8.15169 25 4.09668 23.3842 4.09668 23.3842Z"
              fill="#8B8B8B"
              fill-rule="evenodd"
            />
            
    
          </g>
          

        </svg>
      </button>
      <nav
        aria-hidden="true"
        id="loggedInNav"
        style="background: var(--sui-bg-panel, white); border: solid 1px var(--sui-text, #000000); border-right: 0; position: absolute; right: 0; top: var(--sui-header-height, 60px); width: 200px; z-index: var(--sui-z-dropdown, 1); display: none;"
      >
        <ul
          style="list-style: none; margin: 0; padding: 0;"
        >
          <li
            style="border-bottom: solid 1px var(--sui-text, #000000);"
          >
            <a
              href="https://reflectechblog.wordpress.com/"
              style="background: none; border: 0; color: var(--sui-text, black); cursor: pointer; display: block; font-family: Arial; font-size: 1em; text-align: left; padding: var(--sui-space-md, 1em); width: 100%; text-decoration: none;"
            />
          </li>
        </ul>
      </nav>
    </div>
    <div
      style="border-left: solid 1px var(--sui-text, #000000); margin-left: auto;"
    >
      <nav
        aria-hidden="true"
        id="helperNav"
        style="background: var(--sui-bg-panel, white); border: solid 1px var(--sui-text, #000000); border-right: 0; position: absolute; right: 0; top: var(--sui-header-height, 60px); width: 200px; z-index: var(--sui-z-dropdown, 1); display: none;"
      >
        <ul
          style="list-style: none; margin: 0; padding: 0;"
        >
          <li
            style="undefined font-weight: bold; padding: 0.5em 1em; color: #666; font-size: 0.9em;"
          >
            🎨 Themes
          </li>
          <li
            style="border-bottom: solid 1px var(--sui-text, #000000);"
          >
            <button
              style="background: none; border: 0; color: var(--sui-text, black); cursor: pointer; display: block; font-family: Arial; font-size: 1em; text-align: left; padding: var(--sui-space-md, 1em); width: 100%;"
            />
          </li>
          <li
            style="border-bottom: solid 1px var(--sui-text, #000000);"
          >
            <button
              style="background: none; border: 0; color: var(--sui-text, black); cursor: pointer; display: block; font-family: Arial; font-size: 1em; text-align: left; padding: var(--sui-space-md, 1em); width: 100%;"
            />
          </li>
          <li
            style="border-bottom: solid 1px var(--sui-text, #000000);"
          >
            <button
              style="background: none; border: 0; color: var(--sui-text, black); cursor: pointer; display: block; font-family: Arial; font-size: 1em; text-align: left; padding: var(--sui-space-md, 1em); width: 100%;"
            />
          </li>
          <li
            style="border-bottom: solid 1px var(--sui-text, #000000);"
          >
            <button
              style="background: none; border: 0; color: var(--sui-text, black); cursor: pointer; display: block; font-family: Arial; font-size: 1em; text-align: left; padding: var(--sui-space-md, 1em); width: 100%;"
            />
          </li>
          <li
            style="border-bottom: solid 1px var(--sui-text, #000000);"
          >
            <button
              style="background: none; border: 0; color: var(--sui-text, black); cursor: pointer; display: block; font-family: Arial; font-size: 1em; text-align: left; padding: var(--sui-space-md, 1em); width: 100%;"
            />
          </li>
          <li
            style="border-top: 1px solid #ddd; margin: 0.5em 0;"
          />
          <li
            style="border-bottom: solid 1px var(--sui-text, #000000);"
          >
            <a
              href="https://reflectechblog.wordpress.com/"
              style="background: none; border: 0; color: var(--sui-text, black); cursor: pointer; display: block; font-family: Arial; font-size: 1em; text-align: left; padding: var(--sui-space-md, 1em); width: 100%; text-decoration: none;"
            />
          </li>
        </ul>
      </nav>
      <button
        style="background: none; border: 0; cursor: pointer; width: var(--sui-header-height, 60px); height: var(--sui-header-height, 60px);"
        type="button"
      >
        <img
          src="https://solidos.github.io/solid-ui/src/icons/https://solidos.github.io/solid-ui/src/icons/noun_help.svg"
          style="border-radius: var(--sui-border-radius-full, 50%); height: 56px; width: 28px !important;"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`createHelpMenu creates a menu.... 1`] = `
<div
  style="border-left: solid 1px var(--sui-text, #000000); margin-left: auto;"
>
  <nav
    aria-hidden="true"
    id="helperNav"
    style="background: var(--sui-bg-panel, white); border: solid 1px var(--sui-text, #000000); border-right: 0; position: absolute; right: 0; top: var(--sui-header-height, 60px); width: 200px; z-index: var(--sui-z-dropdown, 1); display: none;"
  >
    <ul
      style="list-style: none; margin: 0; padding: 0;"
    >
      <li
        style="undefined font-weight: bold; padding: 0.5em 1em; color: #666; font-size: 0.9em;"
      >
        🎨 Themes
      </li>
      <li
        style="border-bottom: solid 1px var(--sui-text, #000000);"
      >
        <button
          style="background: none; border: 0; color: var(--sui-text, black); cursor: pointer; display: block; font-family: Arial; font-size: 1em; text-align: left; padding: var(--sui-space-md, 1em); width: 100%;"
        />
      </li>
      <li
        style="border-bottom: solid 1px var(--sui-text, #000000);"
      >
        <button
          style="background: none; border: 0; color: var(--sui-text, black); cursor: pointer; display: block; font-family: Arial; font-size: 1em; text-align: left; padding: var(--sui-space-md, 1em); width: 100%;"
        />
      </li>
      <li
        style="border-bottom: solid 1px var(--sui-text, #000000);"
      >
        <button
          style="background: none; border: 0; color: var(--sui-text, black); cursor: pointer; display: block; font-family: Arial; font-size: 1em; text-align: left; padding: var(--sui-space-md, 1em); width: 100%;"
        />
      </li>
      <li
        style="border-bottom: solid 1px var(--sui-text, #000000);"
      >
        <button
          style="background: none; border: 0; color: var(--sui-text, black); cursor: pointer; display: block; font-family: Arial; font-size: 1em; text-align: left; padding: var(--sui-space-md, 1em); width: 100%;"
        />
      </li>
      <li
        style="border-bottom: solid 1px var(--sui-text, #000000);"
      >
        <button
          style="background: none; border: 0; color: var(--sui-text, black); cursor: pointer; display: block; font-family: Arial; font-size: 1em; text-align: left; padding: var(--sui-space-md, 1em); width: 100%;"
        />
      </li>
      <li
        style="border-top: 1px solid #ddd; margin: 0.5em 0;"
      />
    </ul>
  </nav>
  <button
    style="background: none; border: 0; cursor: pointer; width: var(--sui-header-height, 60px); height: var(--sui-header-height, 60px);"
    type="button"
  >
    <img
      src="https://solidos.github.io/solid-ui/src/icons/https://solidos.github.io/solid-ui/src/icons/noun_help.svg"
      style="border-radius: var(--sui-border-radius-full, 50%); height: 56px; width: 28px !important;"
    />
  </button>
</div>
`;

exports[`createLoginSignUpButtons creates div 1`] = `
<div
  style="margin-left: auto;"
>
  <div>
    <div
      class="SolidSignInOrSignUpBox"
      style="display:flex;"
    >
      <input
        style="padding: 1em; border-radius: var(--sui-border-radius-sm, 0.2em); font-size: 100%;margin: 0.75em 0 0.75em 0.5em !important; padding: var(--sui-input-padding, 0.5em) !important;background-color: var(--sui-bg-input, #eef);"
        type="button"
        value="Log in"
      />
      <input
        style="padding: 1em; border-radius: var(--sui-border-radius-sm, 0.2em); font-size: 100%;margin: 0.75em 0 0.75em 0.5em !important; padding: var(--sui-input-padding, 0.5em) !important;background-color: var(--sui-bg-active, #efe);"
        type="button"
        value="Sign Up for Solid"
      />
    </div>
  </div>
</div>
`;

exports[`createUserMenu creates a menu.... 1`] = `
<div
  style="undefined"
>
  <button
    style="background: none; border: 0; cursor: pointer; width: var(--sui-header-height, 60px); height: var(--sui-header-height, 60px);"
    type="button"
  >
    

    <svg
      fill="none"
      height="26"
      viewBox="0 0 26 26"
      width="26"
      xmlns="http://www.w3.org/2000/svg"
    >
      
    
      <path
        clip-rule="evenodd"
        d="M13 25C19.6274 25 25 19.6274 25 13C25 6.37258 19.6274 1 13 1C6.37258 1 1 6.37258 1 13C1 19.6274 6.37258 25 13 25Z"
        fill="#D8D8D8"
        fill-rule="evenodd"
        stroke="#8B8B8B"
      />
      
    
      <mask
        height="26"
        id="mask0"
        mask-type="alpha"
        maskUnits="userSpaceOnUse"
        width="26"
        x="0"
        y="0"
      >
        
        
        <path
          clip-rule="evenodd"
          d="M13 25C19.6274 25 25 19.6274 25 13C25 6.37258 19.6274 1 13 1C6.37258 1 1 6.37258 1 13C1 19.6274 6.37258 25 13 25Z"
          fill="white"
          fill-rule="evenodd"
          stroke="white"
        />
        
    
      </mask>
      
    
      <g
        mask="url(#mask0)"
      >
        
        
        <path
          clip-rule="evenodd"
          d="M17.0468 10.4586C17.0468 14.4979 15.4281 16.9214 12.9999 16.9214C10.5718 16.9214 8.95298 14.4979 8.95298 10.4586C8.95298 6.41931 12.9999 6.41931 12.9999 6.41931C12.9999 6.41931 17.0468 6.41931 17.0468 10.4586ZM4.09668 23.3842C6.52483 17.7293 12.9999 17.7293 12.9999 17.7293C12.9999 17.7293 19.475 17.7293 21.9031 23.3842C21.9031 23.3842 17.8481 25 12.9999 25C8.15169 25 4.09668 23.3842 4.09668 23.3842Z"
          fill="#8B8B8B"
          fill-rule="evenodd"
        />
        
    
      </g>
      

    </svg>
  </button>
  <nav
    aria-hidden="true"
    id="loggedInNav"
    style="background: var(--sui-bg-panel, white); border: solid 1px var(--sui-text, #000000); border-right: 0; position: absolute; right: 0; top: var(--sui-header-height, 60px); width: 200px; z-index: var(--sui-z-dropdown, 1); display: none;"
  >
    <ul
      style="list-style: none; margin: 0; padding: 0;"
    >
      <li
        style="border-bottom: solid 1px var(--sui-text, #000000);"
      >
        <a
          href="https://reflectechblog.wordpress.com/"
          style="background: none; border: 0; color: var(--sui-text, black); cursor: pointer; display: block; font-family: Arial; font-size: 1em; text-align: left; padding: var(--sui-space-md, 1em); width: 100%; text-decoration: none;"
        />
      </li>
    </ul>
  </nav>
</div>
`;

exports[`createUserMenuButton creates a button 1`] = `
<button
  style="background: none; border: 0; color: var(--sui-text, black); cursor: pointer; display: block; font-family: Arial; font-size: 1em; text-align: left; padding: var(--sui-space-md, 1em); width: 100%;"
/>
`;

exports[`createUserMenuItem creates a link 1`] = `
<li
  style="border-bottom: solid 1px var(--sui-text, #000000);"
>
  <ul />
</li>
`;

exports[`createUserMenuLink creates a link 1`] = `
<a
  href="http://www.test.com"
  style="background: none; border: 0; color: var(--sui-text, black); cursor: pointer; display: block; font-family: Arial; font-size: 1em; text-align: left; padding: var(--sui-space-md, 1em); width: 100%; text-decoration: none;"
/>
`;

exports[`getProfileImg returns an empty image 1`] = `
"
<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"26\\" height=\\"26\\" viewBox=\\"0 0 26 26\\" fill=\\"none\\">
    <path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M13 25C19.6274 25 25 19.6274 25 13C25 6.37258 19.6274 1 13 1C6.37258 1 1 6.37258 1 13C1 19.6274 6.37258 25 13 25Z\\" fill=\\"#D8D8D8\\" stroke=\\"#8B8B8B\\"/>
    <mask id=\\"mask0\\" mask-type=\\"alpha\\" maskUnits=\\"userSpaceOnUse\\" x=\\"0\\" y=\\"0\\" width=\\"26\\" height=\\"26\\">
        <path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M13 25C19.6274 25 25 19.6274 25 13C25 6.37258 19.6274 1 13 1C6.37258 1 1 6.37258 1 13C1 19.6274 6.37258 25 13 25Z\\" fill=\\"white\\" stroke=\\"white\\"/>
    </mask>
    <g mask=\\"url(#mask0)\\">
        <path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M17.0468 10.4586C17.0468 14.4979 15.4281 16.9214 12.9999 16.9214C10.5718 16.9214 8.95298 14.4979 8.95298 10.4586C8.95298 6.41931 12.9999 6.41931 12.9999 6.41931C12.9999 6.41931 17.0468 6.41931 17.0468 10.4586ZM4.09668 23.3842C6.52483 17.7293 12.9999 17.7293 12.9999 17.7293C12.9999 17.7293 19.475 17.7293 21.9031 23.3842C21.9031 23.3842 17.8481 25 12.9999 25C8.15169 25 4.09668 23.3842 4.09668 23.3842Z\\" fill=\\"#8B8B8B\\"/>
    </g>
</svg>"
`;

exports[`header is exposed on public API 1`] = `undefined`;

exports[`rebuildHeader creates a link 1`] = `[Function]`;
